--- a/index.html
+++ b/index.html
@@ -24,17 +24,225 @@
 <!-- Ingredient -->
 
 <!-- Menu -->
-<section class="section">
+<section class="section section--menu">
     <div class="container">
+        <div class="menu">
+
+            <div class="menu__col">
+                <div class="menu__card">
+                    <h2 class="card__title">Appetisers</h2>
+                    <ul class="card__content">
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Tzatsiki</h2>
+                                <p class="dish__price">$3.99</p>
+                            </div>
+                            <p class="dish__text">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Aubergine Salad </h2>
+                                <p class="dish__price">$5.50</p>
+                            </div>
+                            <p class="dish__text">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Aubergine Salad</h2>
+                                <p class="dish__price">$5.25</p>
+                            </div>
+                            <p class="dish__text">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="menu__card">
+                    <h2 class="card__title">Salads</h2>
+                    <ul class="card__content">
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Olive Special</h2>
+                                <p class="dish__price">$5.99</p>
+                            </div>
+                            <p class="dish__text">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </li>
+                        <li class="card__dish card__dish--special">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Greek Salad</h2>
+                                <p class="dish__price">$5.50</p>
+                            </div>
+                            <p class="dish__text">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Gusto Salad</h2>
+                                <p class="dish__price">$5.25</p>
+                            </div>
+                            <p class="dish__text">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div> <!-- /.menu__col -->
+
+            <div class="menu__col">
+                <div class="menu__card">
+                    <h2 class="card__title">Starters</h2>
+                    <ul class="card__content">
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Haloumi</h2>
+                                <p class="dish__price">$3.99</p>
+                            </div>
+                            <p class="dish__text">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Spinach Pie</h2>
+                                <p class="dish__price">$5.50</p>
+                            </div>
+                            <p class="dish__text">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="menu__card">
+                    <h2 class="card__title">Main Dishes</h2>
+                    <ul class="card__content">
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Cornish Mackerel</h2>
+                                <p class="dish__price">$5.99</p>
+                            </div>
+                            <p class="dish__text">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </li>
+                        <li class="card__dish card__dish--special">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Roast Lamb</h2>
+                                <p class="dish__price">$5.50</p>
+                            </div>
+                            <p class="dish__text">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Fried_Chicken</h2>
+                                <p class="dish__price">$5.25</p>
+                            </div>
+                            <p class="dish__text">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </li>
+                        <li class="card__dish">
+                            <div class="dish__header">
+                                <h2 class="dish__title">Pastitsio</h2>
+                                <p class="dish__price">$5.99</p>
+                            </div>
+                            <p class="dish__text">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div> <!-- /.menu__col -->
+
+
+        </div> <!-- /.menu -->
+    </div> <!-- /.container -->
+</section>
+
+<!-- Reviews -->
+<section class="section section--reviews">
+    <div class="container">
+        <div class="reviews">
+            <div class="reviews__mask">
+                <img src="images/reviews/content-bg.jpg">
+            </div>
+            <h2 class="reviews__title">Guest Reviews</h2>
+            <span class="reviews__quotes">“</span>
+            <div class="reviews__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</div>
+            <a class="reviews__author" href="#"><span>- food inc, New York</span></a>
+        </div>
 
     </div>
 </section>
 
-<!-- Reviews -->
-
 <!-- Reservation -->
+<section class="section">
+    <div class="container">
+        <div class="reservation">
+            <div class="reservation__images">
+                <img class="reservation__img" src="images/reservation/1.jpg" alt="" >
+                <img class="reservation__img" src="images/reservation/2.jpg" alt="" >
+            </div>
+            <div class="reservation__content">
+                <h2 class="reservation__title">Just the right food</h2>
+                <p class="reservation__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.</p>
+                <p class="reservation__text reservation__text--last">
+                Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out! Perfect materials and freshly baked food.</p>
+
+                <form class="reservation__form" action="/" method="post">
+                    <div class="reservation__form__item">
+                        <label class="reservation__label" for="u-name">Name</label>
+                        <input class="reservation__input" type="text" name="username" id="u-name" placeholder="your name *">
+                    </div>
+
+                    <div class="reservation__form__item">
+                        <label class="reservation__label" for="mail">Name</label>
+                        <input class="reservation__input" type="email" name="email"  id="mail" placeholder="your email *">
+                    </div>
+
+                    <div class="reservation__form__item">
+                        <label class="reservation__label" for="date">Date</label>
+                        <input class="reservation__input" type="text"  name="date" id="date" placeholder="date *">
+                    </div>
+                    <i class="reservation__icon fas fa-calendar-alt"></i>
+
+                    <div class="reservation__form__item">
+                        <label class="reservation__label" for="tel">Party number</label>
+                        <input class="reservation__input" type="tel" name="tel"  id="tel" placeholder="party number *">
+                    </div>
+                    <i class="reservation__icon reservation__icon--arrow fas fa-chevron-down"></i>
+
+                    <button class="reservation__btn" type="submit">Book now!</button>
+                </form>
+            </div> <!-- /.reservation__content -->
+        </div> <!-- /.reservation -->
+    </div> <!-- /.container -->
+</section>
 
 <!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__card">
+                <h3 class="footer__title">About Us</h3>
+                <p class="footer__text">
+                    Lambda's new and expanded Chelsea location represents a truly authentic <b>Greek</b> patisserie, featuring breakfasts of fresh croissants and steaming bowls of café.<br>
+                    Lamda the best restaurant in town
+                </p>
+            </div>
+            <div class="footer__card">
+                <h3 class="footer__title">Opening Hours</h3>
+                <p class="footer__text">
+                    <b>Mon-Thu:</b> 7:00am-8:00pm <br>
+                    <b>Fri-Sun:</b> 7:00am-10:00pm
+                </p>
+                <div class="footer__icons">
+                    <a href="#"><i class="footer__link fab fa-cc-amex"></i></a>
+                    <a href="#"><i class="footer__link fab fa-cc-paypal"></i></a>
+                    <a href="#"><i class="footer__link fab fa-cc-visa"></i></a>
+                    <a href="#"><i class="footer__link fab fa-cc-discover"></i></a>
+                </div>
+            </div>
+            <div class="footer__card">
+                <h3 class="footer__title">Our Location</h3>
+                <address class="footer__address">
+                    <p>19th Paradise Street Sitia</p>
+                    <p>128 Meserole Avenue</p>
+                </address>
+                <div class="footer__icons">
+                    <a href="#"><i class="footer__link fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="footer__link fab fa-youtube"></i></a>
+                    <a href="#"><i class="footer__link fab fa-twitter"></i></a>
+                    <a href="#"><i class="footer__link fas fa-poll"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
