--- a/index.html
+++ b/index.html
@@ -192,10 +192,17 @@
 <!--                    <i class="reservation__icon fas fa-calendar-alt"></i>-->
 
                     <div class="reservation__form__item">
-                        <label class="reservation__label" for="tel">Party number</label>
-                        <input class="reservation__input" list="tel-list" type="tel" name="tel"  id="tel" placeholder="party number *" required pattern="^[ 0-9]+$">
-                        <datalist id="tel-list">
-                            <option value="121648975489">
+                        <label class="reservation__label" for="count">Party number</label>
+                        <input class="reservation__input" list="count-list" type="number" name="count"  id="count" placeholder="party number *" required>
+                        <datalist id="count-list">
+                            <option value="1">
+                            <option value="2">
+                            <option value="3">
+                            <option value="4">
+                            <option value="5">
+                            <option value="10">
+                            <option value="15">
+                            <option value="20">
                         </datalist>
                         <img class="reservation__arrow-icon" src="images/reservation/icon-arrow.png">
 
