--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <p class="reservation__text reservation__text--last">
                 Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out! Perfect materials and freshly baked food.</p>
 
-                <form class="reservation__form" action="/" method="post">
+                <form class="reservation__form" action="" method="post">
                     <div class="reservation__form__item">
                         <label class="reservation__label" for="u-name">Name</label>
                         <input class="reservation__input" type="text" name="username" id="u-name" placeholder="your name *" required>
