some comments added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- About -->
 
-<!-- Ingredient -->
+<!-- Ingredients -->
 
 <!-- Menu -->
 <section class="section section--menu">
@@ -189,7 +189,6 @@
                         <input class="reservation__input" type="date"  name="date" id="date" placeholder="date *" required>
                         <img class="reservation__date-icon" src="images/reservation/icon-calendar.png">
                     </div>
-<!--                    <i class="reservation__icon fas fa-calendar-alt"></i>-->
 
                     <div class="reservation__form__item">
                         <label class="reservation__label" for="count">Party number</label>
@@ -207,7 +206,6 @@
                         <img class="reservation__arrow-icon" src="images/reservation/icon-arrow.png">
 
                     </div>
-
 
                     <button class="reservation__btn" type="submit">Book now!</button>
                 </form>
