code readability improved

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/af9d2d7781.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
 
 <!-- Promo -->
 <section class="section section--promo">
-      
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -78,9 +76,7 @@
     </div>
 </section>
 
-
 <!-- Ingredients -->
-
 <section class="section section--ingredients">
     <div class="container">
         <div class="ingredients">
@@ -107,7 +103,6 @@
 <section class="section section--menu">
     <div class="container">
         <div class="menu">
-
             <div class="menu__col">
                 <div class="menu__card">
                     <h2 class="card__title">Appetisers</h2>
@@ -248,7 +243,9 @@
                 <h2 class="reservation__title">Just the right food</h2>
                 <p class="reservation__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.</p>
                 <p class="reservation__text reservation__text--last">
-                Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out! Perfect materials and freshly baked food.</p>
+                    Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check
+                    us out! Perfect materials and freshly baked food.
+                </p>
 
                 <form class="reservation__form" action="" method="post">
                     <div class="reservation__form__item">
@@ -281,14 +278,13 @@
                             <option value="20">
                         </datalist>
                         <img class="reservation__arrow-icon" src="images/reservation/icon-arrow.png">
-
                     </div>
 
                     <button class="reservation__btn" type="submit">Book now!</button>
                 </form>
-            </div> <!-- /.reservation__content -->
-        </div> <!-- /.reservation -->
-    </div> <!-- /.container -->
+            </div>  <!-- /.reservation__content -->
+        </div>  <!-- /.reservation -->
+    </div>  <!-- /.container -->
 </section>
 
 <!-- Footer -->
@@ -332,8 +328,8 @@
                     <a href="#"><i class="footer__link fas fa-poll"></i></a>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>  <!-- ./footer__inner -->
+    </div>  <!-- ./container -->
 </footer>
 
 </body>
